# curling-cnn-gat2024

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile_cu118  Dockerfile_cu121  Dockerfile_cu123  LICENSE  README.md  main.cpp
include/: nodetree.hpp  readcsv.hpp  skip.hpp  uctnode.hpp  utility.hpp
src/: randomsearch.cpp  skip.cpp  uctnode.cpp
